# todo

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  release-plz.toml
.claude/: settings.json
.claude/hooks/: post-bash-notify.sh  post-edit-format.sh  pre-commit-check.sh  session-start.sh
.github/workflows/: build.yml  ci.yml  release-plz.yml  release.yml
src/: asana.rs  cache.rs  config.rs  context.rs  focus.rs  lib.rs  main.rs  task.rs  utils.rs
src/commands/: add.rs  complete.rs  focus.rs  install.rs  list.rs  mod.rs  status.rs  summary.rs  update.rs
