[package]
name = "todo"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
console = "0.15.8"
dialoguer = "0.11.0"
env_logger = "0.11.5"
futures = "0.3.31"
human-panic = "2.0.2"
log = "0.4.22"
oauth2 = "4.4.2"
open = "5.3.1"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0.215"
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
