[package]
name = "ziyad-todo"
version = "1.1.2"
edition = "2021"
description = "CLI tool for Asana task management and daily focus tracking"
license = "MIT"
repository = "https://github.com/ziyadedher/todo"
keywords = ["asana", "todo", "cli", "productivity", "focus"]
categories = ["command-line-utilities"]

[lib]
name = "todo"
path = "src/lib.rs"

[[bin]]
name = "todo"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/todo-{ target }.tar.gz"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
console = "0.16.2"
dialoguer = "0.12.0"
env_logger = "0.11.8"
futures = "0.3.31"
human-panic = "2.0.6"
log = "0.4.29"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
open = "5.3.3"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.148"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"
